<resources>
    <string name="app_name">Sports Matching</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_retype_password">Retype Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_retype">Retyped password must be consistent</string>
    <string name="invalid_phone">Not a valid phone number</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_account">Login Account</string>
    <string name="signup_prompt">Let\'s get started</string>
    <string name="signup_little_prompt">Sign up to Explore all the valuable features</string>
    <string name="name">Name</string>
    <string name="register_failed">Register Failed!</string>
<!--    yizhou's string-->
    <string name="start_match_title">Start a match!</string>
    <string name="_1_date">Select A Day For Event * </string>
    <string name="_2_start_time">Choose the Start Time and End Time * </string>
    <string name="_3_end_time">3. End time</string>
    <string name="_4_proficiency">Choose Proficiency * </string>
    <string name="_5_game_type">5. Game type</string>
    <string name="_6_location">6. Location</string>
    <string name="_7_number_of_team_members">7. Number of Team Members</string>
    <string name="_8_tags">8. Tags</string>
    <string name="_9_upload_photos">9. Upload Photos</string>
    <string name="_10_title">10. Title</string>
    <string name="_11_description_optional">11. Description (optional)</string>
    <string name="_16_00">16:00</string>
    <string name="_18_00">18:00</string>
    <string name="beginner">Beginner</string>
    <string name="choose_the_start_time_end_time"><![CDATA[Choose the Start Time & End Time*]]></string>
    <string name="to">To</string>
    <string name="choose_proficiency">Choose Proficiency *</string>
    <string name="choose_sports_type">Choose Sports Type *</string>
    <string name="enter_of_teammates">Enter # of Teammates *</string>
    <string name="five">5</string>
    <string name="continue_str">continue</string>
    <string name="select_a_day_for_event">Select A Day For Event *</string>
    <string name="back">Back</string>
    <string name="post">post</string>
    <string name="title_hint">Title</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    
    <string-array name="proficiency_dropdown">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Pro</item>
        <item>Expert</item>
    </string-array>
    
    <string-array name="sportsType_dropdown">
        <item>Table Tennis</item>
        <item>Basketball</item>
        <item>Badminton</item>
        <item>Tennis</item>
        <item>Chess</item>
        <item>Soccer</item>
        <item>Baseball</item>
    </string-array>
    <string name="test_user_name">Yizhou Liu</string>
    <string name="test_match_title">Ping Pong double people GAME AT 4 PM PITTSBURGH!!</string>
    <string name="test_match_location">Location: Pittsburgh, PA, 15217</string>
    <string name="match_sport">Sport: Table Tennis</string>
    <string name="test_match_team">Team: 4/4</string>
    <string name="test_match_time">Time: 16:00 - 18:00 March 30th</string>
    <string name="incoming_match">Incoming</string>
    <string name="pending_match">Pending</string>
    <string name="next_match_prompt">Your next game will be in</string>
    <string name="next_match_count_down">5:00 mins</string>
    <string name="detail_page_title">CALL OUT FOR BASKETBALL GAME 4:PM AT PITTSBURGH</string>
    <string name="detail_page_main_text">Looking for people to join our basketball game at basketball field in CMU campus! From 4 pm to 6 pm or later! Welcome anyone who is above 18 and interested! No requirement for skills and levels!</string>
    <string name="detail_page_info_location">Location: Pittsburgh, PA, 15217</string>
    <string name="detail_page_info_time">Time: 16:00–18:00 Today</string>
    <string name="detail_page_info_sport_type">Sport: Basketball</string>
    <string name="detail_page_info_availability">Team: 7/10</string>
    <string name="current_team">Current Team</string>
    <string name="team_chat">Team Chat</string>
    <string name="leave_the_team">Leave The Team</string>
    <string name="cancel_the_event">cancel event</string>
    <string name="_3_remaining">3 remaining</string>
    <string name="friends">Friends/Team</string>

    <string name="congrats">Congrats</string>
    <string name="your_match_has_been_created">Your Match Has Been Created!</string>
    <string name="now_waiting_for_other_players">Now waiting for other players...</string>

    <string name="check_in">check in</string>
    <string name="sign_out">Sign out</string>
    <string name="search_prompt">Looking for a team to join?</string>

</resources>