<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/common_vertical_margin">

    <LinearLayout
        android:id="@+id/Detail_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/border_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/common_vertical_margin"
            android:background="@drawable/loadingbox" />

        <TextView
            android:id="@+id/next_match_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/common_vertical_margin"
            android:text="3 remaining"
            android:textAppearance="@style/medium_text"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/common_vertical_margin"
            android:text="@string/detail_page_title"
            android:textAppearance="@style/big_title"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="340dp"
            android:layout_height="100dp"
            app:cardCornerRadius="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border_background">

            <ImageView
                android:id="@+id/detail_field_pic"
                android:layout_width="400dp"
                android:layout_height="120dp"
                android:src="@drawable/basketball_on_court"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/detail_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/common_vertical_margin"
            android:text="@string/detail_page_main_text"
            android:textAppearance="@style/medium_text"
            />

        <TextView
            android:id="@+id/detail_info_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/common_vertical_margin"
            android:text="@string/detail_page_info_location"
            android:textAppearance="@style/medium_text"
            />

        <TextView android:top="1dp"
            android:id="@+id/detail_info_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/common_vertical_margin"
            android:text="@string/detail_page_info_time"
            android:textAppearance="@style/medium_text"
            />

        <TextView
            android:id="@+id/detail_info_sport_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/common_vertical_margin"
            android:text="@string/detail_page_info_sport_type"
            android:textAppearance="@style/medium_text"
            />

        <TextView
            android:id="@+id/detail_info_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/common_vertical_margin"
            android:text="@string/detail_page_info_availability"
            android:textAppearance="@style/medium_text"
            />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/current_team_info" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/team_chat_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_chat"
            android:textAppearance="@style/medium_text"
            android:backgroundTint="@color/accent_color"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            />

        <LinearLayout
            android:id="@+id/leave_and_delete_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">


        <Button
            android:id="@+id/leave_button"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_the_team"
            android:backgroundTint="@color/cardview_dark_background"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cancel_the_event"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:layout_marginStart="50dp"
            android:backgroundTint="@android:color/transparent"
            android:stateListAnimator="@null"
            />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
