<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="64dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <TextView
            android:id="@+id/startmatch_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:text="@string/start_match_title"
            android:textAppearance="@style/big_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/startmatch_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:text="@string/select_a_day_for_event"
            android:textAppearance="@style/mid_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startmatch_title" />


        <CalendarView
            android:id="@+id/startmatch_simpleCalendarView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startmatch_date"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/startmatch_startTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:gravity="top"
            android:text="@string/choose_the_start_time_end_time"
            android:textAppearance="@style/mid_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startmatch_simpleCalendarView" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startmatch_startTime"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/startmatch_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/to"
                android:textAppearance="@style/mid_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/startmatch_et_endTime"
                app:layout_constraintHorizontal_bias="0.238"
                app:layout_constraintStart_toEndOf="@+id/startmatch_et_startTime"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/startmatch_et_endTime"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:autofillHints="@string/_18_00"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="@string/_18_00"
                android:inputType="text"
                android:selectAllOnFocus="true"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/startmatch_to"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.545" />

            <EditText
                android:id="@+id/startmatch_et_startTime"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/_16_00"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="@string/_16_00"
                android:inputType="text"
                android:selectAllOnFocus="true"
                tools:layout_editor_absoluteX="40dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/startmatch_proficiency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="644dp"
            android:text="@string/choose_proficiency"
            android:textAppearance="@style/mid_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <Spinner
            android:id="@+id/startmatch_proficiency_dropdown"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startmatch_proficiency" />


        <View
            android:id="@+id/divider_line_1"
            style="@style/Divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startmatch_proficiency_dropdown" />

        <TextView
            android:id="@+id/startmatch_sportsType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:text="@string/choose_sports_type"
            android:textAppearance="@style/mid_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_line_1" />


        <Spinner
            android:id="@+id/startmatch_sportsType_dropdown"
            android:layout_width="0dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startmatch_sportsType" />

        <View
            android:id="@+id/divider_line_2"
            style="@style/Divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startmatch_sportsType_dropdown" />

        <TextView
            android:id="@+id/startmatch_numTeamMembers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:text="@string/enter_of_teammates"
            android:textAppearance="@style/mid_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_line_2" />


        <EditText
            android:id="@+id/startmatch_et_numTeamMates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/five"
            android:hint="@string/five"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startmatch_numTeamMembers" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#67BC5F"
            android:text="@string/continue_str"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startmatch_et_numTeamMates" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>